2008-09-04   xuzo <xuzo@cuarentaydos.com> 


	* eina/eina-player-seek.c: Killed g_source_remove warning
	* run-local.sh, eina/player.c, eina/log.c, eina/main.c: Warnings killed

2008-09-03   xuzo <xuzo@cuarentaydos.com> 


	* macports/audio/eina/Portfile: Updated to 0.6.0
	* src/vogon{c,h}: Minor changes in code and code style
	* gel/gel.{c,h}: Added gel_get_debug_level and gel_set_debug_level to
	control which messages to emit
	* src/main.c: Gel debug level set to 'warn'
	* eina/iface.c: Adjust log level
	* eina/class-base.{c,h}, eina/Makefile.am: Deleted class-base
	* eina/base.{c,h}: Translation support for EinaBase and derivated
	mini-classes, cleanups
	* eina/playlist.c, ui/playlist.glade, plugins/recently/recently.c: Set some
	ellipsize settings on playlist and recently plugin
	* gel/gel.h, gel/gel.c, eina/log.c, eina/main.c: Preliminary support for
	runtime configurable debug leve

2008-09-02   xuzo <xuzo@cuarentaydos.com> 


	* .: Changelog cleared. Let's do it right.
	* ui/vogon.glade: Disable use of playlist module
	* eina/player.c, eina/playlist.{c,h}: Delete functions for embed playlist
	* eina/main.c: Re-enable vogon, log components
	* eina/vogon.c: Disable handling of random/remove trying to get out some
	warnings about GtkAction, GtkToggleAction and GtkWidget
	* eina-0.6.pc.in: Added variable pluginsdir
	* ui/vogon.glade, ui/vogon.gladep: Deleted
	* ui/Makefile.in: Remove references to vogon interface
	* src/vogon.{c,h}: Update to use GtkUIManager API