@@ -53,7 +53,7 @@ PACKAGE_CFLAGS="\
 	$PACKAGE_CFLAGS \
 	-DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
 	-DGEL_DISABLE_DEPRECATED -DGEL_UI_DISABLE_DEPRECATED \
-	-Wall -Werror -g"
+	-Wall -Werror -g -std=c99"
 AC_SUBST(LIBLOMO_VERSION)
 
 PACKAGE_RELEASE_DATE="`date -R`"
